View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032958 | Open CASCADE | OCCT:Coding | public | 2022-05-04 10:11 | 2023-03-19 19:07 |
Reporter | Assigned To | ||||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.7.0 | ||||
Target Version | 7.7.0 | Fixed in Version | 7.6.3 | ||
Summary | 0032958: Coding - compilation fails with OCCT_DEBUG=ON | ||||
Description | /dn61/builds/CR0-WEEK-17_CR0-WEEK-17/OCCT_SRC/src/GeomFill/GeomFill_Pipe.cxx:1081:56: error: invalid use of incomplete type 'class Geom_BSplineCurve' In file included from /dn61/builds/CR0-WEEK-17_CR0-WEEK-17/Debian80-64-deb/OCCT/include/opencascade/Adaptor3d_Curve.hxx:1:0, from /dn61/builds/CR0-WEEK-17_CR0-WEEK-17/OCCT_SRC/src/GeomFill/GeomFill_Pipe.hxx:20, from /dn61/builds/CR0-WEEK-17_CR0-WEEK-17/Debian80-64-deb/OCCT/include/opencascade/GeomFill_Pipe.hxx:1, from /dn61/builds/CR0-WEEK-17_CR0-WEEK-17/OCCT_SRC/src/GeomFill/GeomFill_Pipe.cxx:25: /dn61/builds/CR0-WEEK-17_CR0-WEEK-17/OCCT_SRC/src/Adaptor3d/Adaptor3d_Curve.hxx:34:7: error: forward declaration of 'class Geom_BSplineCurve' /dn61/builds/CR0-WEEK-17_CR0-WEEK-17/OCCT_SRC/src/GeomFill/GeomFill_Pipe.cxx:1116:56: error: invalid use of incomplete type 'class Geom_BSplineCurve' In file included from /dn61/builds/CR0-WEEK-17_CR0-WEEK-17/Debian80-64-deb/OCCT/include/opencascade/Adaptor3d_Curve.hxx:1:0, from /dn61/builds/CR0-WEEK-17_CR0-WEEK-17/OCCT_SRC/src/GeomFill/GeomFill_Pipe.hxx:20, from /dn61/builds/CR0-WEEK-17_CR0-WEEK-17/Debian80-64-deb/OCCT/include/opencascade/GeomFill_Pipe.hxx:1, from /dn61/builds/CR0-WEEK-17_CR0-WEEK-17/OCCT_SRC/src/GeomFill/GeomFill_Pipe.cxx:25: /dn61/builds/CR0-WEEK-17_CR0-WEEK-17/OCCT_SRC/src/Adaptor3d/Adaptor3d_Curve.hxx:34:7: error: forward declaration of 'class Geom_BSplineCurve' This issue is a child of: https://tracker.dev.opencascade.org/view.php?id=32951 | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | N/A | ||||
child of | 0032951 | closed | Coding - get rid of unused headers [GeomConvert to IGESBasic] |
|
Branch CR32958 has been created by aml. SHA-1: b43b39be7f90ebc0fb157134e9fb7e6d2c02c3e3 Detailed log of new commits: Author: aml Date: Wed May 4 11:11:00 2022 +0300 0032958: Coding - problem compile OCCT on Debian80-64 and MacOS-x86_64 with debugging mode Add missing include. |
|
Dear Kirill, Please take a look at the patch. Jenkins job is: http://jenkins-test-occt/view/CR32958-master-aml/view/ALL/ |
|
Branch CR32958 has been deleted by mnt. SHA-1: b43b39be7f90ebc0fb157134e9fb7e6d2c02c3e3 |
Date Modified | Username | Field | Change |
---|---|---|---|
2022-05-04 10:11 |
|
New Issue | |
2022-05-04 10:11 |
|
Assigned To | => aml |
2022-05-04 11:10 |
|
Summary | Problem compile OCCT on Debian80-64 and MacOS-x86_64 with debugging mode => Coding - problem compile OCCT on Debian80-64 and MacOS-x86_64 with debugging mode |
2022-05-04 11:11 | git | Note Added: 0108288 | |
2022-05-04 11:32 |
|
Relationship added | child of 0032951 |
2022-05-04 11:32 |
|
Description Updated | |
2022-05-04 12:03 | kgv | Product Version | => 7.7.0 |
2022-05-04 12:03 | kgv | Target Version | 7.6.3 => 7.7.0 |
2022-05-04 12:03 | kgv | Status | new => assigned |
2022-05-04 13:13 |
|
Assigned To | aml => kgv |
2022-05-04 13:13 |
|
Status | assigned => resolved |
2022-05-04 13:13 |
|
Steps to Reproduce Updated | |
2022-05-04 13:13 |
|
Note Added: 0108297 | |
2022-05-04 14:13 | kgv | Severity | minor => trivial |
2022-05-04 14:13 | kgv | Summary | Coding - problem compile OCCT on Debian80-64 and MacOS-x86_64 with debugging mode => Coding - compilation fails with OCCT_DEBUG=ON |
2022-05-04 14:13 | kgv | Test case number | => N/A |
2022-05-04 14:13 | kgv | Assigned To | kgv => bugmaster |
2022-05-04 14:13 | kgv | Status | resolved => reviewed |
2022-05-08 13:54 | bugmaster | Status | reviewed => tested |
2022-05-08 16:15 |
|
Changeset attached | => occt master 5dd4cb6e |
2022-05-08 16:15 |
|
Assigned To | bugmaster => aml |
2022-05-08 16:15 |
|
Status | tested => verified |
2022-05-08 16:15 |
|
Resolution | open => fixed |
2022-05-08 16:17 | git | Note Added: 0108385 | |
2023-03-19 19:07 | vglukhik | Status | verified => closed |
2023-03-19 19:07 | vglukhik | Fixed in Version | => 7.6.3 |