0032958: Coding - problem compile OCCT on Debian80-64 and MacOS-x86_64 with debugging mode

Add missing include.